[package]
name = "hello_macro_derive"
version = "0.1.0"
authors = ["André Silva <andregs@users.noreply.github.com>"]
edition = "2018"

[lib]
proc-macro = true # this is a procedural macro crate

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "1.0.14"
quote = "1.0.2"